# detection-training

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
detection_training/: config.py
detection_training/evaluate_model/: __init__.py  __main__.py  config.yaml  model_evaluation.py  types.py
detection_training/generate_dataset/: __init__.py  __main__.py  config.yaml  dataset_generation.py  types.py
detection_training/scripts/: start_local_mlflow.py  stop_local_mlflow.py
detection_training/start_mlflow/: colab.sh  local.sh
detection_training/tracking/: __init__.py  mlflow_logs.py  mlflow_setup.py
detection_training/train_yolo/: __init__.py  __main__.py  config.yaml  types.py  yolo_training.py
detection_training/utils/: __init__.py  config.py  inference.py  logging.py  yaml.py
docs/: mkdocs.yml
docs/docs/: index.md
